# aoc22

./: .gitignore  Makefile  aoc.opam  dune-project
lib/: luke1_2.ml  luke2_1.ml  luke2_2.ml  luke3_1.ml  luke3_2.ml  luke4_1.ml  luke4_2.ml  project.ml  read.ml  timer.ml
